Migrate to JDK17